--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>セキュリティ適職診断ツール解説</title>
+    <title>セキュリティ適職診断 （試作品）</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
@@ -167,7 +167,7 @@
     </main>
 
     <footer class="bg-neutral-800 text-neutral-300 py-8 text-center mt-12">
-        <p>&copy; 2024 セキュリティ適職診断プロジェクトチーム</p>
+        <p>&copy; 2025 LCL-Tokyo WG セキュリティ適職診断プロジェクトチーム</p>
     </footer>
 
     <!-- Scripts -->
