fix: 試作品であることを強調

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav class="sticky-nav shadow-md">
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
-            <div class="text-xl font-semibold text-amber-700">適職診断解説</div>
+            <div class="text-xl font-semibold text-amber-700">セキュリティ適職診断 （試作品）</div>
             <div class="space-x-4">
                 <a href="#purpose" class="nav-link">目的</a>
                 <a href="#mechanism" class="nav-link">仕組み</a>
@@ -26,7 +26,7 @@
 
     <header class="bg-amber-100 py-12 text-center">
         <div class="container mx-auto px-6">
-            <h1 class="text-4xl font-bold mb-4">セキュリティ適職診断ツール解説</h1>
+            <h1 class="text-4xl font-bold mb-4">セキュリティ適職診断 （試作品）</h1>
             <p class="text-lg text-neutral-700">あなたに最適なセキュリティのキャリアを見つけるために</p>
         </div>
     </header>
