--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                 <p class="mb-4 text-neutral-700">あなたのスキルプロファイルと、最も適性が高いと診断された職種は以下の通りです。</p>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6 items-center">
                     <div>
+                        <p class="text-xl font-bold text-neutral-800 mb-4">おすすめの職種: <span id="recommendedJob" class="text-amber-700" aria-live="polite"></span></p>
                         <p class="text-lg font-medium text-neutral-800 mb-2">あなたのカテゴリ別スコア:</p>
                         <ul id="userScoresList" class="list-disc list-inside text-neutral-700 mb-4" aria-label="カテゴリ別スコア一覧">
                             <!-- User scores will be listed here -->
                         </ul>
-                        <p class="text-xl font-bold text-neutral-800">おすすめの職種: <span id="recommendedJob" class="text-amber-700" aria-live="polite"></span></p>
                     </div>
                     <div class="chart-container mx-auto">
                         <canvas id="userProfileChart" aria-label="あなたのスキルプロファイルを表示するレーダーチャート" role="img"></canvas>
