refactor: Update header to include an image and simplify layout

--- a/index.html
+++ b/index.html
@@ -27,11 +27,8 @@
         </div>
     </nav>
 
-    <header class="bg-amber-100 py-12 text-center">
-        <div class="container mx-auto px-6">
-            <h1 class="text-4xl font-bold mb-4">セキュリティ適職診断</h1>
-            <p class="text-lg text-neutral-700">あなたに最適なセキュリティのキャリアを見つけるために</p>
-        </div>
+    <header class="bg-amber-100 text-center">
+        <img src="header-image.svg" alt="セキュリティ適職診断" class="w-full h-auto" style="max-width: 1920px; margin: 0 auto; display: block;">
     </header>
 
     <main class="container mx-auto px-6 py-8">
