--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="セキュリティ適職診断">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="theme-color" content="#b45309">
+    <meta name="theme-color" content="#6b21a8">
     <title>セキュリティ適職診断</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -19,7 +19,7 @@
 
     <nav class="sticky-nav shadow-md">
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
-            <div class="text-xl font-semibold text-amber-700">セキュリティ適職診断</div>
+            <div class="text-xl font-semibold text-purple-700">セキュリティ適職診断</div>
             <div class="space-x-4">
                 <a href="#purpose" class="nav-link">目的</a>
                 <a href="#diagnosis-tool" class="nav-link">診断を試す</a>
@@ -27,7 +27,7 @@
         </div>
     </nav>
 
-    <header class="bg-amber-100 text-center">
+    <header class="bg-purple-100 text-center">
         <img src="header-image.svg" alt="セキュリティ適職診断" class="w-full h-auto" style="max-width: 1920px; margin: 0 auto; display: block;">
     </header>
 
@@ -53,21 +53,21 @@
                 <p id="errorMessageText"></p>
             </div>
 
-            <button id="diagnoseButton" class="mt-8 w-full md:w-auto px-6 py-3 bg-amber-500 text-white font-bold rounded-lg shadow-md hover:bg-amber-600 transition duration-300" aria-label="全ての質問に回答後、診断を実行">
+            <button id="diagnoseButton" class="mt-8 w-full md:w-auto px-6 py-3 bg-purple-500 text-white font-bold rounded-lg shadow-md hover:bg-purple-600 transition duration-300" aria-label="全ての質問に回答後、診断を実行">
                 診断する
             </button>
             <button id="resetButton" class="mt-4 w-full md:w-auto px-6 py-3 bg-neutral-300 text-neutral-800 font-bold rounded-lg shadow-md hover:bg-neutral-400 transition duration-300 md:ml-4" aria-label="診断フォームをリセット">
                 リセット
             </button>
 
-            <div id="diagnosisResult" class="mt-8 p-6 bg-white rounded-lg shadow-inner border border-amber-200" role="region" aria-labelledby="diagnosisResultTitle">
-                <h3 id="diagnosisResultTitle" class="text-xl font-semibold mb-4 text-amber-700">あなたの診断結果</h3>
+            <div id="diagnosisResult" class="mt-8 p-6 bg-white rounded-lg shadow-inner border border-purple-200" role="region" aria-labelledby="diagnosisResultTitle">
+                <h3 id="diagnosisResultTitle" class="text-xl font-semibold mb-4 text-purple-700">あなたの診断結果</h3>
                 <p class="mb-4 text-neutral-700">あなたのスキルプロファイルと、最も適性が高いと診断された職種は以下の通りです。</p>
                 <div class="grid grid-cols-1 md:grid-cols-2 grid-rows-2 gap-6">
                     <!-- 左上：診断結果の文章 -->
                     <div class="row-span-1">
-                        <p class="text-xl font-bold text-neutral-800 mb-4">おすすめの職種: <span id="recommendedJob" class="text-amber-700 text-lg" aria-live="polite"></span></p>
-                        <div id="jobDescription" class="mb-4 p-3 bg-amber-50 border border-amber-200 rounded-lg text-neutral-700 text-base whitespace-pre-line hidden">
+                        <p class="text-xl font-bold text-neutral-800 mb-4">おすすめの職種: <span id="recommendedJob" class="text-purple-700 text-lg" aria-live="polite"></span></p>
+                        <div id="jobDescription" class="mb-4 p-3 bg-purple-50 border border-purple-200 rounded-lg text-neutral-700 text-base whitespace-pre-line hidden">
                             <!-- 職種説明がここに表示されます -->
                         </div>
                     </div>
@@ -84,14 +84,20 @@
                         </div>
                     </div>
                     <!-- 右下：スコアの配点 -->
-                    <div class="row-span-1 md:flex md:justify-end">
-                        <div class="w-full md:w-1/2 md:mr-16">
+                    <div class="row-span-1 md:flex md:justify-center">
+                        <div class="w-full md:w-1/2">
                             <p class="text-lg font-medium text-neutral-800 mb-2">あなたのカテゴリ別スコア:</p>
                             <ul id="userScoresList" class="list-disc list-inside text-neutral-700 mb-4" aria-label="カテゴリ別スコア一覧">
                                 <!-- User scores will be listed here -->
                             </ul>
                         </div>
                     </div>
+                </div>
+                <!-- X投稿ボタン -->
+                <div class="mt-6 text-center">
+                    <button id="shareToTwitterButton" class="px-6 py-3 bg-purple-500 text-white font-bold rounded-lg shadow-md hover:bg-purple-600 transition duration-300" aria-label="診断結果をXに投稿">
+                        診断結果をXに投稿する
+                    </button>
                 </div>
             </div>
         </section>
