--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="apple-mobile-web-app-title" content="セキュリティ適職診断">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#6b21a8">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://x.com; frame-src https://x.com;">
     <title>セキュリティ適職診断</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
